ctowasm/test/samples/error/fn_param_redefinition.c
int main(int x, int x) {
  int x;
}